syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends multiple greetings
  rpc SayMultiHello (MultiHelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The request message containing the user's name and how many greetings they want.
message MultiHelloRequest {
  string name = 1;
  required uint32 num_greetings = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1; 
}
